# KRSSG-Tasks

./: README.md
Task 1/: client1.py  gru1.py  minion1.py
Task 2/: lift2.py  liftsend.py
Task 3/: pathfinder2.cpp
Task 3/turtlesend/: CMakeLists.txt  package.xml
Task 3/turtlesend/src/: PID.cpp  PID1.cpp  pathfinder.cpp  pathfinder1.cpp
Task 4/: pendulum.py  task4.txt
