<?xml version="1.0"?>
<package format="2">
  <name>turtlesend</name>
  <version>0.0.0</version>
  <description>The turtlesend package</description>


  
  <maintainer email="abhigandhi29@gmail.com">abhishek_gandhi</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_depend>cv_bridge</build_depend>
  <exec_depend>cv_bridge</exec_depend>
<build_depend>image_transport</build_depend>
  <exec_depend>image_transport</exec_depend>
 <build_export_depend>cv_bridge</build_export_depend>
<build_export_depend>image_transport</build_export_depend>
<build_export_depend>OpenCV</build_export_depend>
<build_depend>OpenCV</build_depend>
  <exec_depend>OpenCV</exec_depend>
<build_export_depend>geometry_msgs</build_export_depend>
<build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
<build_export_depend>turtlesim</build_export_depend>
<build_depend>turtlesim</build_depend>
  <exec_depend>turtlesim</exec_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
